Bug-fix : Page CSS : overflow-x Issue : RESOLVED

--- a/css/pages/page.css
+++ b/css/pages/page.css
@@ -4,6 +4,7 @@
 
 #page-wrapper {
 /*	overflow-x: hidden;*/ /* discontinued in support of position sticky */
+	overflow-x: clip; /* this works! has good support */
 }
 
 /* -- Page Content -- */
